    ibase64streabuf1.f and ibase64streabuf2.f.

  * Replaced return *gptr() by return static_cast<unsigned char>(*gptr())
    in underflow members of (i)streambuf classes to prevent promotions of
    characters 0xff to -1, which is EOF.

  * Added missing DateTime::timeStruct (inline) implementation to DateTime.

  * Since the global errno variable is used by too much code, Exception{x}
    constructors now also store x in a global int FBB::g_errno variable.

  * GetHostent was rebuilt using getaddrinfo and getnameinfo.

bobcat (4.03.00)

  * Prepared all classes depending on the OpenSSL libraries for OpenSSL1.1.0
    Note that the new library requires linking to the crypto library as well
    (refer to the man-pages for details). Bobcat's release 4.03.00 also
    compiles OK with the current (1.0.2) OpenSSL version.

  * Programs using DiffieHellman should be recompiled.

  * The class Signal now uses 'sigaction' instead of the (deprecated) function
    'signal' 

  * IRandStream uses type 'long' for its seed argument to match time(0)'s
    return type

  * Various cosmetic code cleanups were performed (e.g., changing Exception()
    constructions into Exception{} constructions)

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 17 Aug 2016 07:56:10 +0200

    
bobcat (4.02.00)

  * Added the member template 
        template <typename Fun, typename ...Args>
        void wait(Fun fun, Args &&...args);        // wait # available
    to the class Semaphore. See 'man -e bobcat semaphore' for details.

  * Updated documentation for yodl 3.07.01

  * Updated 'required': yodl >= 3.07.01, icmake >= 8.01.00

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 26 Apr 2016 10:38:48 +0530

bobcat (4.01.04)

  * build script updated to icmake >= 8.00.04

  * 'build install' supports an optional LOG: argument: the (relative or
    absolute) path to an installation log file. The environment variable
    BOBCAT is no longer used.
