@@ -1,16 +1,4 @@
-Add member to Process to retrieve the child's exit code after, e.g., inserting
-the eoi manipulator of after calling eoi().
-
-Process: stress (in the man-page) that waitForChild may be needed after start
-
-Glob:   provide named 0 values for Glob::Flags
-
-Add new binary operator implementing templates
-
- 
 Add member to OneKey(?) to switch off/on cin-input TTY echoing.
-
-Add a member to Arg to call help from the Arg object
 
 Provide examples in the following man-pages:
 
@@ -18,9 +6,3 @@ ifdstreambuf.yo
 milter.yo
 ofdstreambuf.yo
 
-Glob should have a flag preventing throwing an exception when no files are
-found. 
-
-Arg's manpage should use {} to initialize LongOptions
-
-Exception's manpage should mention g_errno
