@@ -69,6 +69,7 @@ class Arg: public ArgTypes__
         int beyondDashes() const;
 
         std::string const &basename() const;
+        void help() const;
         size_t nArgs() const;
 
             // total number of specified short (and combined long) options
