@@ -4,6 +4,8 @@ void Arg__::versionHelp(void (*usage)(string const &progname),
         char const *version, size_t minArgs, int helpFlag, 
         int versionFlag) const
 {
+    d_usage = usage;
+
     if (option(versionFlag) && !option(helpFlag))
     {
         cout << basename() << " V" << version << '\n';
@@ -23,3 +25,4 @@ void Arg::versionHelp(void (*usage)(string const &progname),
 {
     return d_ptr->versionHelp(usage, version, minArgs, helpFlag, versionFlag);
 }
+
