@@ -13,4 +13,3 @@ using namespace std;
 using namespace FBB;
 
 #include "zoneshiftseconds.f"
-#include "timestruct.f"
