@@ -106,6 +106,11 @@ manpagesection(NON-STATIC MEMBER FUNCTIONS)
         tt(beyondDashes) member returns the index of the first argument beyond
         the tt(--) argument, which itself is removed from the remaining set of
         arguments.
+    itb(void help() const)
+       If the member tt(versionHelp) (see below) has been called then this
+        member calls the tt(usage) function that was passed to
+        tt(versionHelp). If tt(versionHelp) has not been called (i.e., if no
+        tt(usage) function has been specified) then an exception is thrown.
     itb(size_t nArgs() const)
        Returns the number of arguments left after option-removal.  The
         program name bf(argv[0]) is NOT counted here.
