@@ -192,8 +192,8 @@ using namespace FBB;
 
 ArgConfig::LongOption lo[] =
 {
-    ArgConfig::LongOption("option", 'o'),
-    ArgConfig::LongOption("value-option", 'v')
+    ArgConfig::LongOption{"option", 'o'},
+    ArgConfig::LongOption{"value-option", 'v'}
 };
 
 class X
