@@ -1,0 +1,4 @@
+inline Exception::Exception()
+{
+    g_errno = 0;
+}
