@@ -1,0 +1,8 @@
+#include "process.ih"
+
+int Process::eoi()
+{
+    *this << FBB::eoi;
+    return exitStatus();
+}
+
