@@ -1,6 +1,0 @@
-
-inline void Process::eoi()
-{
-    *this << FBB::eoi;
-}
-
