@@ -20,6 +20,8 @@ struct ProcessData: private ProcessEnums, public SignalHandler
     std::condition_variable d_condition;
     size_t d_bufSize;
 
+    int d_exitStatus;
+
     ProcessData(size_t bufSize);
     ~ProcessData() override;
 
