@@ -14,9 +14,19 @@ bobcat (4.04.00)
   * Added missing DateTime::timeStruct (inline) implementation to DateTime.
 
   * Since the global errno variable is used by too much code, Exception{x}
-    constructors now also store x in a global int FBB::g_errno variable.
+    constructors now also store x in a thread_local int FBB::g_errno variable.
 
   * GetHostent was rebuilt using getaddrinfo and getnameinfo.
+
+  * Glob received two new flags: NO_FLAG and NOMATCH (refer to its man-page
+    for details). 
+
+  * Added member Arg::help() calling the usage function that was passed to
+    Arg::versionHelp (refer to its man-page for details).
+
+  * Added member int exitStatus() to Process returning the child process's
+    exit status after calling eoi() or inserting the eoi manipulator. The
+    eoi() member now also returns the child process's exit status.
 
 bobcat (4.03.00)
 
